--- a/src/app/shared/styles/_animations.scss
+++ b/src/app/shared/styles/_animations.scss
@@ -237,21 +237,21 @@
     opacity: 0.5;
     text-transform: lowercase;
   }
-  30%{
+  20%{
     color: colors.$main-blue;
-    transform: scale(0.7) translate(-30%, -40%);
+    transform: scale(0.7) translate(-100%, -40%);
     opacity: 1;
     text-transform: lowercase;
   }
-  40%{
+  22%{
     color: colors.$main-blue;
-    transform: scale(0.7) translate(-30%, -40%);
+    transform: scale(0.7) translate(-100%, -40%);
     opacity: 1;
     text-transform: lowercase;
   }
   99% {
     color: colors.$main-blue;
-    transform: scale(2) translate(-25%, -25%);
+    transform: scale(1.8) translate(-25%, -25%);
     opacity: 0;
      text-transform: lowercase;
   }
@@ -269,21 +269,21 @@
     opacity: 0.5;
     text-transform: uppercase;
   }
-  30%{
+  20%{
     color: colors.$main-blue;
-    transform: scale(0.7) translate(-30%, -40%);
+    transform: scale(0.7) translate(-100%, -40%);
     opacity: 1;
     text-transform: uppercase;
   }
-  40%{
+  22%{
     color: colors.$main-blue;
-    transform: scale(0.7) translate(-30%, -40%);
+    transform: scale(0.7) translate(-100%, -40%);
     opacity: 1;
     text-transform: uppercase;
   }
   99% {
     color: colors.$main-blue;
-    transform: scale(2) translate(-25%, -25%);
+    transform: scale(1.8) translate(-25%, -25%);
     opacity: 0;
      text-transform: uppercase;
   }
